# eyrc-25-26-krishi-cobot

./: Dockerfile-humble  README.md  Readme.md  docker-run.sh  requirements.sh
ebot_description/config/: bridge.yaml
ebot_description/launch/: spawn_ebot.launch.py
ebot_description/models/ebot/: ebot.gazebo  ebot_description.xacro
eyantra_warehouse/: CMakeLists.txt
eyantra_warehouse/config/: ekf.yaml  robot.rviz  slam-config.yaml
eyantra_warehouse/launch/: navigation.launch.py  slam.launch.py  task0.launch.py  task1.launch.py  task1_bonus.launch.py
eyantra_warehouse/models/arm_base/: model.sdf
eyantra_warehouse/models/bad_fruit/: model.sdf
eyantra_warehouse/models/conveyor_belt/: model.sdf
eyantra_warehouse/models/dock_shape/: model.sdf
eyantra_warehouse/models/drop_table/: model.config  model.sdf
eyantra_warehouse/models/fertiliser_can/: model.sdf
eyantra_warehouse/models/fruit_tray/: model.sdf
eyantra_warehouse/models/good_fruit/: model.sdf
eyantra_warehouse/models/ground_plane/: model.sdf
eyantra_warehouse/models/pick_table/: model.config  model.sdf
eyantra_warehouse/models/plant/: model.sdf
eyantra_warehouse/worlds/: eyantra_warehouse_task0.world  eyantra_warehouse_task1.world  eyantra_warehouse_task1_bonus.world
pymoveit2/: CMakeLists.txt  package.xml
pymoveit2/examples/: twist_servo_cal.py  ur5_arm.urdf
pymoveit2/srv/: MoveToPose.srv
ur_description/: CMakeLists.txt
ur_description/urdf/: ur.urdf.xacro  ur_macro.xacro
ur_simulation_gz/: CMakeLists.txt
ur_simulation_gz/launch/: spawn_arm.launch.py
(+26 files in other folders)
